fixed stem airship alignment

--- a/assets/styles/atc.css
+++ b/assets/styles/atc.css
@@ -1038,7 +1038,7 @@ section.stem .note a {
 
 @media only screen and (min-width: 768px) {
   section.stem .note {
-    width: 50%;
+    max-width: 55%;
     padding-top: 18vh;
   }
 }
@@ -1071,7 +1071,7 @@ section.stem .kids img:hover {
 
 @media only screen and (min-width: 768px) {
   section.stem .kids {
-    margin: 12vh 0 -5vh;
+    margin: 16vh 0 -5vh;
   }
 }
 
@@ -1099,8 +1099,14 @@ section.stem .gallery svg {
   section.stem {
     background-image: url("/assets/img/airship.svg");
     background-repeat: no-repeat;
-    background-size: 110% 120%;
-    background-position: left top;
+    background-size: 110% 110%;
+    background-position: right top;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  section.stem {
+    background-size: 90% 130%;
   }
 }
 
